feat: add new routes for the 2 different types of transactions

--- a/FrontEnd/public/locales/it/common.json
+++ b/FrontEnd/public/locales/it/common.json
@@ -44,7 +44,11 @@
     "filter": "Filtra",
     "home": "Home",
     "new": "Nuovo",
-    "ok": "Ok"
+    "ok": "Ok",
+    "expenses": "Spese",
+    "incomes": "Entrate",
+    "transactions": "transazioni",
+    "transaction": "transazione"
   },
   "login": {
     "btn": "Accedi",
